# leetcodetutor

./: .gitignore  Makefile  Readme.md
leetapi/: .gitignore  pyproject.toml
leetapi/alembic/: env.py
leetapi/alembic/versions/: 0001_initial.py
leetapi/leetapi/: cli.py  config.py  db.py  main.py  models.py  schemas.py
leetapi/leetapi/routers/: cache.py  companies.py  models.py  problems.py  stats.py  tutor.py
leetapi/leetapi/services/: cache.py  importer.py  leetcode.py  legacy.py  llm.py  personas.py  prompts.py  stats.py  topics.py  tutor.py
leetapi/tests/: conftest.py
leetapi/tests/fixtures/: leetcode_count_and_say.json  leetcode_two_sum.json
leetapi/tests/fixtures/problems_csv/CompanyA/: 5. All.csv
leetapi/tests/fixtures/problems_csv/CompanyB/: 5. All.csv
leetapi/tests/fixtures/problems_csv/CompanyC/: 5. All.csv
leetapi/tests/integration/: test_companies_stats.py  test_health.py  test_meta.py  test_problems.py  test_statement.py  test_tutor.py
leetapi/tests/unit/: test_importer.py  test_leetcode.py  test_stats.py  test_topics.py
web/: .env.local.example  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/cache/: route.ts
web/app/api/complete/: route.ts
web/app/api/models/: route.ts
web/app/companies/: page.tsx
web/app/stats/: page.tsx
web/components/: AppShell.tsx  Catalog.tsx  Companies.tsx  CompanyDetail.tsx  PersonaContext.tsx  SettingsContext.tsx  Stats.tsx  StudySheet.tsx  StudyView.tsx  Topbar.tsx  Tutor.tsx  TweaksPanel.tsx
web/lib/: api.ts  explanations.ts  types.ts
(+3 files in other folders)
