[project]
name = "leetapi"
version = "0.1.0"
description = "LeetCode tutor service: catalog, statements, LLM tutoring with persona-keyed cache."
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "openai>=1.55",
    "beautifulsoup4>=4.14",
    "markdownify>=1.2",
    "pandas>=2.2",
    "typer>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "asgi-lifespan>=2.1",
]

[project.scripts]
leetapi = "leetapi.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leetapi"]
